Update setup.sh